<resources>
    <string name="app_name">Mosca app</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_comprobar_datos">ComprobarDatos</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="android_studio">Android Studio</string>
    <string name="todo">TODO</string>
    <string name="gobierno_de_san_luis">Gobierno de San Luis</string>
    <string name="mosca_de_los_frutos">Mosca de los frutos</string>
    <string name="agregar">Agregar</string>
    <string name="cancelar">Cancelar</string>
    <string name="códigoqr">Código QR</string>
    <string name="correo">Correo</string>
    <string name="coordenadas">Coordenadas</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="observaciones">Observaciones</string>
    <string name="content_splash">content splash</string>
    <string name="test">Test</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>

</resources>
